fix editor not loading on ios

--- a/apps/mobile/html/Web.bundle/site/styles.css
+++ b/apps/mobile/html/Web.bundle/site/styles.css
@@ -1021,7 +1021,7 @@
 }
 
 #formBox {
-    margin-block-end:0px
+    margin-block-end:0;
 }
 
 
